Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -3,8 +3,8 @@
 <head>
         <meta charset="utf-8" />
         <title>PyConPH 2016</title>
-        <link rel="stylesheet" href="http://pycon-2016.python.ph/theme/css/main.css" />
-        <link href="http://pycon-2016.python.ph/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="PyConPH 2016 Atom Feed" />
+        <link rel="stylesheet" href="https://pycon.python.ph/theme/css/main.css" />
+        <link href="https://pycon.python.ph/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="PyConPH 2016 Atom Feed" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -13,7 +13,7 @@
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="http://pycon-2016.python.ph/">PyConPH 2016 </a></h1>
+                <h1><a href="https://pycon.python.ph/">PyConPH 2016 </a></h1>
                 <nav><ul>
                 </ul></nav>
         </header><!-- /#banner -->
@@ -32,7 +32,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="http://pycon-2016.python.ph/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://pycon.python.ph/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
