--- a/tags.html
+++ b/tags.html
@@ -3,8 +3,9 @@
 <head>
   <title>PyConPH 2016 - Tags</title>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="/theme/css/basscss.min.css" />
-  <link rel="stylesheet" href="/theme/css/main.css" />
+  <link href="https://pycon.python.ph/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="PyConPH 2016 Full Atom Feed" />
+  <link rel="stylesheet" href="https://pycon.python.ph/theme/css/basscss.min.css" />
+  <link rel="stylesheet" href="https://pycon.python.ph/theme/css/main.css" />
   <script src="https://use.typekit.net/bmw2mzd.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
