Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -3,6 +3,7 @@
 <head>
   <title>PyConPH 2016</title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://pycon.python.ph/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="PyConPH 2016 Full Atom Feed" />
   <link rel="stylesheet" href="https://pycon.python.ph/theme/css/basscss.min.css" />
   <link rel="stylesheet" href="https://pycon.python.ph/theme/css/main.css" />
@@ -10,13 +11,11 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 
-<body class="flex">
-  <main>
+<body>
 <h1>Archives for PyConPH 2016</h1>
 
 <dl>
 </dl>
-  </main>
 </body>
 
 </html>
