--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>PyConPH 2016</title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://pycon.python.ph/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="PyConPH 2016 Full Atom Feed" />
   <link rel="stylesheet" href="https://pycon.python.ph/theme/css/basscss.min.css" />
   <link rel="stylesheet" href="https://pycon.python.ph/theme/css/main.css" />
@@ -10,37 +11,48 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 
-<body class="flex">
-  <main>
-<div class="index-bg white absolute top-0 right-0 bottom-0 left-0">
-  <div class="overlay absolute top-0 right-0 bottom-0 left-0 p2 flex">
+<body>
+<main class="relative flex flex-center">
+  <div class="overlay white absolute top-0 right-0 bottom-0 left-0 p2 flex">
     <small class="attr">
       <a href="https://flic.kr/p/87mSoQ">https://flic.kr/p/87mSoQ</a>
     </small>
   </div>
-</div>
-<section class="index white relative flex flex-wrap p4">
-  <h1 class="relative col-12">
-    PyCon Philippines
-    <span class="absolute top-0 right-0">2016</span>
-  </h1>
-  <div class="relative col-4 z1 p2">
-    <p>The next PyCon Philippines is going to be held in Cebu! This year's theme
-    is <em class="h1">"Diversity"</em>.</p>
-    <p><a href="http://ph.pycon.org/index.html">&rsaquo; Last year's PyCon</a></p>
-  </div>
-  <div class="relative col-4 z1 p2">
-    <a class="call-for inline-block" href="http://goo.gl/forms/OgShjxPr51" target="_blank">
-      <span class="relative">Call for Proposals</span>
-    </a>
-  </div>
-  <div class="relativev col-4 z1 p2">
-    <a class="call-for inline-block" href="#" target="_blank">
-      <span class="relative">Call for Volunteers</span>
-    </a>
-  </div>
-</section>
-  </main>
+  <section class="index white relative flex flex-wrap p4">
+    <h1 class="relative mt0 col-12">
+      PyCon<br />
+      Philippines
+      <span class="absolute top-0 right-0">2016</span>
+    </h1>
+    <div class="relative sm-col-6 md-col-3 z1 p2">
+      <p>
+        The next PyCon Philippines is going to be held in Cebu!
+      </p>
+      <p>
+        This year's theme is
+        <em class="h1 align-baseline">"Diversity"</em>.</p>
+      <p>
+      <p>
+        <a href="http://ph.pycon.org/index.html">&rsaquo; Last year's PyCon</a>
+      </p>
+    </div>
+    <div class="relative sm-col-6 md-col-3 z1 p2">
+      <a class="call-for inline-block mb4" href="http://goo.gl/forms/OgShjxPr51" target="_blank">
+        <span class="relative">Call for Proposals</span>
+      </a>
+    </div>
+    <div class="relative sm-col-6 md-col-3 z1 p2">
+      <a class="call-for inline-block" href="#" target="_blank">
+        <span class="relative">Call for Volunteers</span>
+      </a>
+    </div>
+    <div class="relative sm-col-6 md-col-3 z1 p2">
+      <a class="call-for inline-block mb4" href="#" target="_blank">
+        <span class="relative">Sponsor us</span>
+      </a>
+    </div>
+  </section>
+</main>
 </body>
 
 </html>
