--- a/tags.html
+++ b/tags.html
@@ -3,6 +3,7 @@
 <head>
   <title>PyConPH 2016 - Tags</title>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://pycon.python.ph/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="PyConPH 2016 Full Atom Feed" />
   <link rel="stylesheet" href="https://pycon.python.ph/theme/css/basscss.min.css" />
   <link rel="stylesheet" href="https://pycon.python.ph/theme/css/main.css" />
@@ -10,9 +11,7 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 
-<body class="flex">
-  <main>
-  <h1>Tags for PyConPH 2016</h1>  </main>
-</body>
+<body>
+  <h1>Tags for PyConPH 2016</h1></body>
 
 </html>
