--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <div class="relative sm-col-6 md-col-3 z1 p2">
       <a class="call-for inline-block mb4" href="#" target="_blank">
-        <span class="relative">Sponsor us</span>
+        <span class="relative">Be a sponsor</span>
       </a>
     </div>
   </section>
